--- a/Exercice3/APP_FILMS/templates/films/films_add.html
+++ b/Exercice3/APP_FILMS/templates/films/films_add.html
@@ -5,31 +5,16 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Clavioter un nouveau GENRE
+				Clavioter un nouveau Mail
 			</p>
 			<form method="POST">
 				<div class="form-group">
 					<label for="Nom_genre">
-						Nom
+						Email
 					</label>
-					<input type ="text" class="form-control" name="InputNom" />
-                    <label for="Nom_genre">
-						Prénom
-					</label>
-					<input type ="text" class="form-control" name="InputPrenom" />
-                    <label for="Nom_genre">
-						Raison sociale
-					</label>
-					<input type ="text" class="form-control" name="InputRS" />
-                    <label for="Nom_genre">
-						Nom Responsable
-					</label>
-					<input type ="text" class="form-control" name="InputNR" />
-                    <label for="Nom_genre">
-						Prenom Responsable
-					</label>
-					<input type ="text" class="form-control" name="InputPR" />
-                    <label for="Nom_genre">
+					<input type ="text" class="form-control" name="InputMail" />
+
+
 				</div>
 				<button type="submit" class="btn btn-primary">
 					Enregistrer le genre
