--- a/Exercice3/APP_FILMS/templates/base.html
+++ b/Exercice3/APP_FILMS/templates/base.html
@@ -48,18 +48,27 @@
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item">
 <!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
-			<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Genres</a>
+			<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Personnes</a>
+		  </li>
+            <li class="nav-item">
+<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
+			<a class="nav-link" href="{{ url_for('films_afficher') }}">Mails</a>
+		  </li>
+            <li class="nav-item">
+<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
+			<a class="nav-link" href="{{ url_for('genres_films_afficher_concat', id_film_sel=0) }}">Personnes - Mails</a>
 		  </li>
 		  <li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			  Films
+			  Mails
 			</a>
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-			  <a class="dropdown-item" href="{{ url_for('films_afficher') }}">Films</a>
+              <a class="dropdown-item" href="{{ url_for('genres_afficher', order_by='ASC', id_genre_sel=0) }}">Personnes</a>
+			  <a class="dropdown-item" href="{{ url_for('films_afficher') }}">Mails</a>
 			  <a class="dropdown-item" href="{{ url_for('genres_films_afficher_concat', id_film_sel=0) }}">Films et genres</a>
 			</div>
 		  </li>
-		  <li class="nav-item dropdown">
+		  <!--<li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			  Autres démos
 			</a>
@@ -67,7 +76,7 @@
 			  <a class="dropdown-item" href="{{ url_for('personnes_taille_dict') }}">Démo pour les ERREURS</a>
 			  <a class="dropdown-item" href="404.html">404</a>
 			</div>
-		  </li>
+		  </li>-->
 		</ul>
 	</div>
 	</nav>
