--- a/Exercice3/APP_FILMS/templates/films/films_afficher.html
+++ b/Exercice3/APP_FILMS/templates/films/films_afficher.html
@@ -32,13 +32,13 @@
 						</td>
 
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-primary" href="{{ url_for('genres_add') }}" role="button">Ajouter</a>
+							<a class="btn btn-primary" href="{{ url_for('films_add') }}" role="button">Ajouter</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('genres_edit', id_genre_edit_html=row.id_Mails) }}" role="button">Edit</a>
+							<a class="btn btn-warning" href="{{ url_for('films_edit', id_genre_edit_html=row.id_Mails) }}" role="button">Edit</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('genres_select_delete', id_genre_delete_html=row.id_Mails) }}" role="button">Delete</a>
+							<a class="btn btn-danger" href="{{ url_for('films_select_delete', id_genre_delete_html=row.id_Mails) }}" role="button">Delete</a>
 						</td>
 					</tr>
 				</tbody>
