--- a/Exercice3/APP_FILMS/templates/genres_films/genres_films_afficher.html
+++ b/Exercice3/APP_FILMS/templates/genres_films/genres_films_afficher.html
@@ -8,79 +8,49 @@
 				<thead>
 					<tr>
 						<th class="" >
-						  Id
+						 Nom
 						</th>
 						<th class="" >
-						  Nom
+						  Prénom
 						</th>
 						<th class="" >
-						  Durée
+						  Email
 						</th>
 						<th class="" >
-						  Date de sortie
-						</th>
-						<th class="" >
-						  Description
-						</th>
-						<th class="" >
-						  Affiche
+						  Action
 						</th>
 					</tr>
 				</thead>
 			{% endif %}
-			{% for row in data %}
+
 			<tbody>
+            {% for row in data %}
 				<tr>
 					  <th class="align-middle">
-						  {{ row.id_film }}
+						  {{ row.Nom_Pers }}
 					  </th>
 					  <th class="align-middle">
-						{{ row.nom_film }}
+						    {{ row.Prenom_Pers }}
 					  </th>
-					  <th class="align-middle">
-						{{ row.duree_film|default("", True) }}
+                      <th class="align-middle">
+						{{ row.Nom_Mail  }}
 					  </th>
-					  <th class="align-middle">
-						{{ row.date_sortie_film|default("", True) }}
-					  </th>
-					  <th class="align-middle">
-						{{ row.description_film|default("", True) }}
-					  </th>
-					  <th class="align-middle">
-<!--						<img class="img-thumbnail" src={{ row.cover_link_film|default(None, True) }} style="border: 0;display: block;width:auto;max-height:450px;" alt = "Covid-19 grand semi-confinement mod 104">-->
-						<img class="img-thumbnail" src={{ row.cover_link_film|default(None, True) }} style="border: 0;"  alt = "Covid-19 grand semi-confinement mod 104">
-					  </th>
-					  <th class="align-middle">
-						<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Ajouter</a>
-					  </th>
-					  <th class="align-middle">
-						<a class="btn btn-warning" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Edit</a>
-					  </th>
-					  <th class="align-middle">
-						<a class="btn btn-danger" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Delete</a>
-					  </th>
-					<tr>
-						<td class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('gf_edit_genre_film_selected', id_film_genres_edit_html=row.id_film) }}" role="button">Modifier</a>
-						</td>
-						<td class="align-middle" colspan="5">
-							{{ row.GenresFilms|default("PAS DE GENRES", True) }}
-						</td>
-					</tr>
+
+
+						<!--<th class="align-middle">
+							<a class="btn btn-primary" href="{{ url_for('gf_edit_genre_film_selected', id_personne=row.id_Pers, id_email=row.id_Mails) }}" role="button">Ajouter</a>
+						</th>-->
+                        <th class="align-middle">
+							<a class="btn btn-warning" href="{{ url_for('gf_edit_genre_film_selected', id_personne=row.id_Pers, id_email=row.id_Mails) }}" role="button">Modifier</a>
+						</th>
+                        <!--<th class="align-middle">
+							<a class="btn btn-danger" href="{{ url_for('gf_edit_genre_film_selected', id_personne=row.id_Pers, id_email=row.id_Mails) }}" role="button">Supprimer</a>
+						</th>-->
+
 				</tr>
+            {% endfor    %}
 			</tbody>
-			{% else %}
-				<tbody>
-					<tr>
-						<td>
-							Aucun film.
-						</td>
-						<td>
-							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Add</a>
-						</td>
-					</tr>
-				</tbody>
-			{% endfor %}
+
 
 		</table>
 	</div>
